samples/_failures_safe/1761646625_4657ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0c4febe.c: In function ‘main’:
./samples/SAFE/__tmp_c0c4febe.c:151:5: error: expected declaration or statement at end of input
  151 |     printf("Matrix B:\n");
      |     ^~~~~~
